src/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>Adjective__c</fullName>
        <label>Adjective</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dry</fullName>
                </value>
                <value>
                    <fullName>dusty</fullName>
                </value>
                <value>
                    <fullName>freezing</fullName>
                </value>
                <value>
                    <fullName>gaseous</fullName>
                </value>
                <value>
                    <fullName>cosmic</fullName>
                </value>
                <value>
                    <fullName>moist</fullName>
                </value>
                <value>
                    <fullName>stinky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>backwards</fullName>
                </value>
                <value>
                    <fullName>sideways</fullName>
                </value>
                <value>
                    <fullName>north</fullName>
                </value>
                <value>
                    <fullName>in endless circles</fullName>
                </value>
                <value>
                    <fullName>south</fullName>
                </value>
                <value>
                    <fullName>in big figure eights</fullName>
                </value>
                <value>
                    <fullName>widdershins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Noun__c</fullName>
        <label>Noun</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>banana</fullName>
                </value>
                <value>
                    <fullName>alien</fullName>
                </value>
                <value>
                    <fullName>astronaut</fullName>
                </value>
                <value>
                    <fullName>asteroid</fullName>
                </value>
                <value>
                    <fullName>spacecraft</fullName>
                </value>
                <value>
                    <fullName>pineapple upside-down cake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proper_Noun__c</fullName>
        <label>Proper Noun</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Codey</fullName>
                </value>
                <value>
                    <fullName>Astro</fullName>
                </value>
                <value>
                    <fullName>Earnie</fullName>
                </value>
                <value>
                    <fullName>Hootie McOwlface</fullName>
                </value>
                <value>
                    <fullName>Adam Seligman</fullName>
                </value>
                <value>
                    <fullName>Sarah Franklin</fullName>
                </value>
                <value>
                    <fullName>Jeff Douglas</fullName>
                </value>
                <value>
                    <fullName>Charlie Isaacs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verb__c</fullName>
        <label>Verb</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>red-dirt rolling</fullName>
                </value>
                <value>
                    <fullName>shimmy-shammying</fullName>
                </value>
                <value>
                    <fullName>whirling</fullName>
                </value>
                <value>
                    <fullName>two-stepping</fullName>
                </value>
                <value>
                    <fullName>moonwalking</fullName>
                </value>
                <value>
                    <fullName>doing the robot (literally)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Communication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>